src/objects/SalesRep_Target_Revenues__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Sales_Fiscal_Month__c</fullName>
        <label>Actual Sales Fiscal Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Units_Fiscal_Month__c</fullName>
        <label>Actual Units Fiscal Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthDate__c</fullName>
        <inlineHelpText>Last Day of the Month</inlineHelpText>
        <label>Fiscal Month/Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <inlineHelpText>Product Category</inlineHelpText>
        <label>ProductCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>ProductLine</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_SalesKey__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique Key for the extract</inlineHelpText>
        <label>SJM SalesKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRevenueTarget__c</fullName>
        <inlineHelpText>Revenue Target for Fiscal Month</inlineHelpText>
        <label>SalesRevenueTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesUnitTarget__c</fullName>
        <inlineHelpText>Target for Units</inlineHelpText>
        <label>SalesUnitTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SalesRep Target Revenue</label>
    <nameField>
        <displayFormat>Sales-{0000000}</displayFormat>
        <label>SJM Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesRep Target Revenues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>